--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,10 +6,27 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: white;
+  background-color: #f7f7f7;
+  background-size: cover;
+  /* background-image: url('https://www.washingtonian.com/wp-content/uploads/2018/11/datingapps-istock-2048x1111.jpg'); */
+  /* opacity: 0.97; */
+  margin:0;
+   padding:0;
+   height:100%;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#page-footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  color: black;
+  /* Height of the footer */
+  background-color: white;
 }
