added zoom features to img

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,3 +30,12 @@ code {
   /* Height of the footer */
   background-color: white;
 }
+
+.zoom {
+  transition: transform .3s; /* Animation */
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  transform: scale(1.2); 
+}
