--- a/client/src/index.css
+++ b/client/src/index.css
@@ -119,8 +119,9 @@ a {
 
 .centered {
   position: absolute;
-  top: 34%;
+  top: 44%;
   left: 2%;
+  color: white;
   font-size: 56px;
   font-family: 'Noticia Text', serif;
   font-family: 'Noto Sans', sans-serif;
@@ -130,9 +131,9 @@ a {
 
 .centereds {
   border: none;
-  box-shadow: 1px 1px#720F1D;
+  box-shadow: 0px 0px#720F1D;
   position: absolute;
-  top: 74%;
+  top: 84%;
   left: 0%;
   font-size: 16px;
   font-family: 'Noticia Text', serif;
