--- a/client/src/index.css
+++ b/client/src/index.css
@@ -122,7 +122,7 @@ a {
   top: 44%;
   left: 2%;
   color: white;
-  font-size: 56px;
+  font-size: 32px;
   font-family: 'Noticia Text', serif;
   font-family: 'Noto Sans', sans-serif;
   font-family: 'Bungee Inline', cursive;
@@ -131,10 +131,11 @@ a {
 
 .centereds {
   border: none;
-  box-shadow: 0px 0px#720F1D;
+  box-shadow:  #f7f7f7;
   position: absolute;
+   /* background-color: #f7f7f7; */
   top: 84%;
-  left: 0%;
+  left: -1.4%;
   font-size: 16px;
   font-family: 'Noticia Text', serif;
   font-family: 'Noto Sans', sans-serif;
@@ -143,10 +144,11 @@ a {
 }
 
 .homebox {
-  box-shadow: 1px 1px #720F1D;
+  box-shadow: 1px 1px #f7f7f7;
   border: none;
-  color: white;
-  background-color: #720F1D;
+  /* color: white; */
+  background-color: #f7f7f7;
+  left: -22%;
 }
 
 .one {
