--- a/client/src/index.css
+++ b/client/src/index.css
@@ -107,6 +107,39 @@ code {
   }
 }
 
+.member1 {
+  position: absolute;
+
+ 
+  left: 17%;
+  animation: move 30s repeat;
+  -webkit-animation: move 4s;
+}
+
+@keyframes move {
+  from {
+    margin-left: 80%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+
+@-webkit-keyframes move {
+  from {
+    margin-left: 80%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 80%;
+    width: 100%;
+  }
+}
+
 a {
   color: black;
 }
@@ -122,7 +155,7 @@ a {
   top: 44%;
   left: 2%;
   color: white;
-  font-size: 32px;
+  font-size: 36px;
   font-family: 'Noticia Text', serif;
   font-family: 'Noto Sans', sans-serif;
   font-family: 'Bungee Inline', cursive;
