--- a/client/src/index.css
+++ b/client/src/index.css
@@ -189,3 +189,19 @@ a {
   height: 100%;
 }
 
+.clicker {
+/* width:100px;
+height:100px; */
+outline:none;
+cursor:pointer;
+}
+
+.hidden{
+display:none;
+height:500px;
+
+}
+
+.clicker:focus + .hidden{
+display:block;
+}
