--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,9 +7,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f7f7f7;
-/* background-size: cover; 
-  background: no-repeat center fixed; */
-
   margin: 0;
   padding: 0;
   height: 100%;
@@ -318,48 +315,43 @@ a {
   display: block;
 }
 
-/* .main {
 
-  background-size: cover;
-  background: no-repeat center fixed;
-  /* background-image: url('https://static1.squarespace.com/static/500818f184aef6ab9cd145a0/t/54eea8cae4b02bdabd98f1ac/1424926928261/?format=2500w'); */
-  /* opacity: .9; */
-  /* -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, .6) 30%, #000 50%, rgba(0, 0, 0, .6) 70%);
-  -webkit-mask-size: 200%;
-  animation: shine 2s infinite; */
-  /* margin: 0;
-  padding: 0;
-  height: 100%; */
-/* }  */
 
 .buttoncenter {
-   border-top: 1px solid #426d87;
-   background: #ffffff;
-   background: -webkit-gradient(linear, left top, left bottom, from(#e8e8e8), to(#ffffff));
-   background: -webkit-linear-gradient(top, #e8e8e8, #ffffff);
-   background: -moz-linear-gradient(top, #e8e8e8, #ffffff);
-   background: -ms-linear-gradient(top, #e8e8e8, #ffffff);
-   background: -o-linear-gradient(top, #e8e8e8, #ffffff);
-   padding: 13.5px 27px;
-   -webkit-border-radius: 29px;
-   -moz-border-radius: 29px;
-   border-radius: 29px;
-   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   box-shadow: rgba(0,0,0,1) 0 1px 0;
-   text-shadow: rgba(0,0,0,.4) 0 1px 0;
-   color: #000000;
-   font-size: 18px;
-   font-family: 'Lucida Grande', Helvetica, Arial, Sans-Serif;
-   text-decoration: none;
-   vertical-align: middle;
-   }
+  border-top: 1px solid #426d87;
+  background: #ffffff;
+  background: -webkit-gradient(linear, left top, left bottom, from(#e8e8e8), to(#ffffff));
+  background: -webkit-linear-gradient(top, #e8e8e8, #ffffff);
+  background: -moz-linear-gradient(top, #e8e8e8, #ffffff);
+  background: -ms-linear-gradient(top, #e8e8e8, #ffffff);
+  background: -o-linear-gradient(top, #e8e8e8, #ffffff);
+  padding: 13.5px 27px;
+  -webkit-border-radius: 29px;
+  -moz-border-radius: 29px;
+  border-radius: 29px;
+  -webkit-box-shadow: rgba(0, 0, 0, 1) 0 1px 0;
+  -moz-box-shadow: rgba(0, 0, 0, 1) 0 1px 0;
+  box-shadow: rgba(0, 0, 0, 1) 0 1px 0;
+  text-shadow: rgba(0, 0, 0, .4) 0 1px 0;
+  color: #000000;
+  font-size: 18px;
+  font-family: 'Lucida Grande', Helvetica, Arial, Sans-Serif;
+  text-decoration: none;
+  vertical-align: middle;
+}
+
 .button:hover {
-   border-top-color: #ffffff;
-   background: #ffffff;
-   color: #ccc;
-   }
+  border-top-color: #ffffff;
+  background: #ffffff;
+  color: #ccc;
+}
+
 .button:active {
-   border-top-color: #1b435e;
-   background: #1b435e;
-   }
+  border-top-color: #1b435e;
+  background: #1b435e;
+}
+
+.join:hover {
+  background-color: black;
+
+}
