--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,33 +10,68 @@ body {
   font-family: 'Ubuntu', sans-serif;
 }
 
-
 #page-footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 60px;
   color: black;
-  /* Height of the footer */
   background-color: white;
 }
 
 .edit-button {
-  background-color: #802139;
+  background-color: #802139!important;
   border-color: #802139;
   color: white;
   margin-right: 10px;
 }
 
+.edit-button:hover {
+  background-color: #802139!important;
+}
+
 .delete-button {
-  background-color: #802139;
+  background-color: #802139!important;
   border-color: #802139;
   color: white;
 }
 
+.delete-button:hover {
+  background-color: #802139!important;
+}
+
+.woman-signup-button {
+    background-color: #802139!important;
+    border-color: #802139;
+    color: white;
+    padding-left: 70px;
+    padding-right: 70px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.woman-signup-button:hover {
+  background-color: #802139!important;
+  border-color: #802139;
+}
+
+.man-signup-button {
+  background-color: #802139!important;
+  border-color: #802139;
+  color: white;
+  padding-left: 70px;
+  padding-right: 70px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.man-signup-button:hover {
+background-color: #802139!important;
+border-color: #802139;
+}
+
 .zoom {
   transition: transform .3s;
-  /* Animation */
   margin: 0 auto;
 }
 
@@ -44,252 +79,6 @@ body {
   transform: scale(1.2);
 }
 
-.zoomer {
-  transition: transform .6s;
-  /* Animation */
-  margin: 0 auto;
-}
-
-.zoomer:hover {
-  transform: scale(1.6);
-}
-
-.members {
-  animation: move 4s repeat;
-  -webkit-animation: move 4s;
-}
-
-@keyframes move {
-  from {
-    margin-left: 100%;
-    width: 300%;
-  }
-
-  to {
-    margin-left: 0%;
-    width: 100%;
-  }
-}
-
-@-webkit-keyframes move {
-  from {
-    margin-left: 100%;
-    width: 300%;
-  }
-
-  to {
-    margin-left: 0%;
-    width: 100%;
-  }
-}
-
-.frontpage {
-  animation: move 2s repeat;
-  -webkit-animation: move 2s;
-}
-
-@keyframes move {
-  from {
-    margin-top: 100%;
-    /* width: 100%; */
-  }
-
-  to {
-    margin-top: 0%;
-    /* width: 100%; */
-  }
-}
-
-@-webkit-keyframes move {
-  from {
-    margin-top: 100%;
-    /* width: 300%; */
-  }
-
-  to {
-    margin-top: 0%;
-    /* width: 100%; */
-  }
-}
-
-.member1 {
-  position: absolute;
-
-
-  left: 17%;
-  animation: move 30s repeat;
-  -webkit-animation: move 4s;
-}
-
-@keyframes move {
-  from {
-    margin-left: 80%;
-    width: 300%;
-  }
-
-  to {
-    margin-left: 0%;
-    width: 100%;
-  }
-}
-
-@-webkit-keyframes move {
-  from {
-    margin-left: 80%;
-    width: 300%;
-  }
-
-  to {
-    margin-left: 80%;
-    width: 100%;
-  }
-}
-
-.member2 {
-  position: absolute;
-
-
-  left: 0%;
-  animation: move 30s repeat;
-  -webkit-animation: move 4s;
-}
-
-@keyframes move {
-  from {
-    margin-left: 80%;
-    width: 300%;
-  }
-
-  to {
-    margin-left: 0%;
-    width: 100%;
-  }
-}
-
-@-webkit-keyframes move {
-  from {
-    margin-left: 80%;
-    width: 300%;
-  }
-
-  to {
-    margin-left: 80%;
-    width: 100%;
-  }
-}
-
-.member3 {
-  position: absolute;
-
-
-  left: 0%;
-  animation: move 30s repeat;
-  -webkit-animation: move 4s;
-}
-
-@keyframes move {
-  from {
-    margin-left: 80%;
-    width: 300%;
-  }
-
-  to {
-    margin-bottom: 0%;
-    width: 100%;
-  }
-}
-
-@-webkit-keyframes move {
-  from {
-    margin-bottom: 80%;
-    width: 300%;
-  }
-
-  to {
-    margin-bottom: 80%;
-    width: 100%;
-  }
-}
-
-.member4 {
-  position: absolute;
-
-
-  left: 0%;
-  animation: move 30s repeat;
-  -webkit-animation: move 4s;
-}
-
-@keyframes move {
-  from {
-    margin-right: 80%;
-    width: 300%;
-  }
-
-  to {
-    margin-left: 0%;
-    width: 100%;
-  }
-}
-
-@-webkit-keyframes move {
-  from {
-    margin-left: 80%;
-    width: 300%;
-  }
-
-  to {
-    margin-left: 80%;
-    width: 100%;
-  }
-}
-
-a {
-  color: black;
-}
-
-.containers {
-  position: relative;
-  text-align: center;
-  color: black;
-}
-
-.centered {
-  position: absolute;
-  top: 40%;
-  left: 38%;
-  color: white;
-  font-size: 36px;
-  font-family: 'Noticia Text', serif;
-  font-family: 'Noto Sans', sans-serif;
-  font-family: 'Bungee Inline', cursive;
-  font-family: 'Nobile', sans-serif;
-}
-
-.centereds {
-  border: none;
-  box-shadow: #f7f7f7;
-  position: absolute;
-  top: 84%;
-  left: -1.4%;
-  font-size: 16px;
-  font-family: 'Noticia Text', serif;
-  font-family: 'Noto Sans', sans-serif;
-  font-family: 'Bungee Inline', cursive;
-  font-family: 'Nobile', sans-serif;
-}
-
-.homebox {
-  box-shadow: 1px 1px #f7f7f7;
-  border: none;
-  background-color: #f7f7f7;
-  left: -22%;
-}
-
-.one {
-  position: absolute;
-  height: 100%;
-}
 
 .rockstar:hover {
   -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, .6) 30%, #000 50%, rgba(0, 0, 0, .6) 70%);
@@ -297,68 +86,4 @@ a {
   animation: shine 2s infinite;
 }
 
-@-webkit-keyframes shine {
-  from {
-    -webkit-mask-position: 150%;
-  }
 
-  to {
-    -webkit-mask-position: -50%;
-  }
-}
-
-
-.hidden {
-  display: none;
-  height: 500px;
-
-}
-
-.clicker:focus+.hidden {
-  display: block;
-}
-
-
-
-.buttoncenter {
-  border-top: 1px solid #426d87;
-  background: #ffffff;
-  background: -webkit-gradient(linear, left top, left bottom, from(#e8e8e8), to(#ffffff));
-  background: -webkit-linear-gradient(top, #e8e8e8, #ffffff);
-  background: -moz-linear-gradient(top, #e8e8e8, #ffffff);
-  background: -ms-linear-gradient(top, #e8e8e8, #ffffff);
-  background: -o-linear-gradient(top, #e8e8e8, #ffffff);
-  padding: 13.5px 27px;
-  -webkit-border-radius: 29px;
-  -moz-border-radius: 29px;
-  border-radius: 29px;
-  -webkit-box-shadow: rgba(0, 0, 0, 1) 0 1px 0;
-  -moz-box-shadow: rgba(0, 0, 0, 1) 0 1px 0;
-  box-shadow: rgba(0, 0, 0, 1) 0 1px 0;
-  text-shadow: rgba(0, 0, 0, .4) 0 1px 0;
-  color: #000000;
-  font-size: 18px;
-  font-family: 'Lucida Grande', Helvetica, Arial, Sans-Serif;
-  text-decoration: none;
-  vertical-align: middle;
-}
-
-.button:hover {
-  border-top-color: #ffffff;
-  background: #ffffff;
-  color: #ccc;
-}
-
-.button:active {
-  border-top-color: #1b435e;
-  background: #1b435e;
-}
-
-.join:hover {
-  background-color: black;
-
-}
-
-.two {
-  font-family: 'Heebo', sans-serif;
-}
