--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@ body {
   background-color: #f7f7f7;
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 100%!important;
   width: 100%;
   font-family: 'Be Vietnam', sans-serif;
   font-family: 'Ubuntu', sans-serif;
@@ -78,7 +78,6 @@ border-color: #802139;
 .zoom:hover {
   transform: scale(1.2);
 }
-
 
 .rockstar:hover {
   -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, .6) 30%, #000 50%, rgba(0, 0, 0, .6) 70%);
