--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,11 @@ body {
   font-family: 'Ubuntu', sans-serif;
 }
 
+a {
+  text-decoration: none!important;
+  color: black;
+}
+
 #page-footer {
   position: absolute;
   bottom: 0;
@@ -20,14 +25,14 @@ body {
 }
 
 .edit-button {
-  background-color: black!important;
-  border-color: black;
-  color: white!important;
+  background-color: #ededed!important;
+  border-color: #ededed;
+  color: black!important;
   margin-right: 10px;
-  border-radius: 30px;
+  border-radius: 7px;
   text-transform: uppercase;
-  font-size: 14px;
-  letter-spacing: 1.3px;
+  font-size: 11.5px;
+  letter-spacing: 1.1px;
   font-weight: bold;
   padding: 12px 15px 12px 15px;
 }
@@ -64,7 +69,7 @@ body {
     padding-right: 70px;
     padding-top: 22px;
     padding-bottom: 22px;
-    border-radius: 30px;
+    border-radius: 10px;
     text-transform: uppercase;
     font-size: 16px;
     letter-spacing: 3px;
@@ -85,7 +90,7 @@ body {
   padding-right: 70px;
   padding-top: 22px;
   padding-bottom: 22px;
-  border-radius: 30px;
+  border-radius: 10px;
   text-transform: uppercase;
   font-size: 16px;
   letter-spacing: 3px;
