--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@ body {
   background-color: #f7f7f7; 
   margin: 0;
   padding: 0;
-  height: 100%!important;
+  max-height: 140vh!important;
   width: 100%;
   font-family: 'Be Vietnam', sans-serif;
   font-family: 'Ubuntu', sans-serif;
@@ -116,6 +116,30 @@ color: black!important;
   -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, .6) 30%, #000 50%, rgba(0, 0, 0, .6) 70%);
   -webkit-mask-size: 200%;
   animation: shine 2s infinite;
+}
+
+/* ----------- iPad 3, 4 and Pro 9.7" ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .main-signup-body {
+      height: 73vh!important;
+     }
+
+     .home-body-container {
+      height: 73vh!important;
+     }
+
+     .female-individual-img {
+       width: 30vw!important;
+     }
+
+     .male-individual-img {
+      width: 30vw!important;
+    }
 }
 
 
