--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,14 +15,6 @@ a {
   color: black;
 }
 
-#page-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  color: black;
-  background-color: white;
-}
 
 .edit-button {
   background-color: #ededed!important;
@@ -86,8 +78,8 @@ a {
   background-color: black!important;
   border-color: black;
   color: white;
-  padding-left: 60px;
-  padding-right: 60px;
+  padding-left: 76px;
+  padding-right: 76px;
   padding-top: 18px;
   padding-bottom: 18px;
   border-radius: 10px;
@@ -118,7 +110,7 @@ color: black!important;
   animation: shine 2s infinite;
 }
 
-/* ----------- iPad 3, 4 and Pro 9.7" ----------- */
+/* ----------- iPad 3, 4 and Pro 9.7 ----------- */
 
 /* Portrait and Landscape */
 @media only screen 
@@ -143,3 +135,11 @@ color: black!important;
 }
 
 
+
+/* ----------- Iphone X ----------- */
+@media only screen and (device-width : 375px) and (device-height : 812px) and (-webkit-device-pixel-ratio : 3) {
+  .main-signup-body {
+      margin-bottom: 20px;
+      height: 160vh!important;
+  }
+}
